--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src"]
 	path = src
 	url = https://github.com/music-assistant/frontend
+[submodule "frontend-source"]
+	path = frontend-source
+	url = https://github.com/music-assistant/frontend.git
