--- a/package.json
+++ b/package.json
@@ -1,65 +1,1 @@
-{
-  "name": "mass",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@egjs/flicking-plugins": "^4.7.1",
-    "@egjs/vue3-flicking": "^4.10.8",
-    "@intlify/unplugin-vue-i18n": "^0.12.2",
-    "@mdi/font": "^7.2.96",
-    "@mdi/js": "^7.2.96",
-    "@tauri-apps/api": "^1.4.0",
-    "color": "^4.2.3",
-    "colorthief": "^2.4.0",
-    "nanoid": "^4.0.2",
-    "home-assistant-js-websocket": "^8.2.0",
-    "mitt": "^3.0.1",
-    "mobile-detect": "^1.4.5",
-    "v3-infinite-loading": "^1.2.2",
-    "vue": "^3.3.4",
-    "vue-audio-better": "^3.0.1",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.4",
-    "vue-virtual-scroller": "2.0.0-beta.8",
-    "vuetify": "^3.3.9",
-    "websocket-ts": "^1.1.1"
-  },
-  "devDependencies": {
-    "@fontsource/roboto": "^5.0.5",
-    "@intlify/vite-plugin-vue-i18n": "^7.0.0",
-    "@types/color": "^3.0.3",
-    "@types/node": "^20.4.2",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-vue": "^9.15.1",
-    "https-localhost": "^4.7.1",
-    "jsdom": "^22.1.0",
-    "material-design-icons-iconfont": "^6.7.0",
-    "nanoid": "^4.0.2",
-    "prettier": "^3.0.0",
-    "replace-in-file": "^7.0.1",
-    "sass": "^1.64.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.6",
-    "vite-plugin-pwa": "^0.16.4",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vite-plugin-webfont-dl": "^3.7.6",
-    "vue-tsc": "^1.8.6",
-    "vue-virtual-scroller": "2.0.0-beta.8",
-    "@tauri-apps/cli": "^1.4.0",
-    "@mdi/js": "^7.2.96"
-  }
-}
+frontend-source/package.json
