--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,1 @@
-{
-  "compilerOptions": {
-    "strict": true,
-    "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
-  },
-  "include": ["vite.config.ts"]
-}
+frontend-source/tsconfig.node.json
