--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,15 +13,13 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = ["shell-open"] }
+tauri = { version = "1.4", features = [ "shell-sidecar", "shell-open", "process-command-api"] }
 discord-rich-presence = "0.2.3"
 tungstenite = {version = "0.19.0", features = ["native-tls"] }
 url = "2.4.0"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
-rust-embed = {version = "6.8.1", features = ["interpolate-folder-path", "compression"] }
 gethostname = "0.4.3"
-subprocess = "0.2.9"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
