--- a/src-tauri/Tauri.toml
+++ b/src-tauri/Tauri.toml
@@ -26,7 +26,7 @@ sidecar = true
 args = true
 
 [tauri.bundle]
-active = true
+active = false
 #targets = "all"
 identifier = "com.mass.app"
 icon = [
