--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "mass"
-version = "0.0.0"
-description = "A Tauri App"
+name = "Mass Desktop"
+version = "0.0.1"
+description = "Mass Desktop App"
 authors = ["you"]
-license = ""
-repository = ""
+license = "Apache-2.0"
+repository = "https://github.com/Un10ck3d/massapp"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
