--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,7 +56,8 @@ jobs:
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          distPath: "$GITHUB_WORKSPACE/frontend-source/dist"
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
 
       - name: Build the app (Windows)
         if: matrix.platform == 'windows-latest'
@@ -64,5 +65,16 @@ jobs:
   
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          distPath: "$env:GITHUB_WORKSPACE/frontend-source/dist"
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+
+      - name: Build the app (Mac)
+        if: matrix.platform == 'windows-latest'
+        uses: tauri-apps/tauri-action@v0
   
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+        with:
+          args: --target universal-apple-darwin
