--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           submodules: true
 
-      - name: Install dependencies (ubuntu only)
+      - name: Install dependencies (Linux)
         if: matrix.platform == 'ubuntu-20.04'
         # You can remove libayatana-appindicator3-dev if you don't use the system tray feature.
         run: |
@@ -28,7 +28,11 @@ jobs:
       - name: Install Rust (Stable)
         run:
           curl https://sh.rustup.rs -sSf | sh -s -- -y
-
+  
+      - name: Install Rust aarch (Mac)
+        if: matrix.platform == 'macos-latest'
+        run: rustup target add aarch64-apple-darwin
+  
       - name: Rust cache
         uses: swatinem/rust-cache@v2
         with:
