--- a/src-tauri/Tauri.toml
+++ b/src-tauri/Tauri.toml
@@ -30,10 +30,11 @@ active = true
 targets = "all"
 identifier = "com.mass.app"
 icon = [
-  "icons/icon.png",
-  "icons/192x192.png",
-  "icons/icon.ico",
-  "icons/icon.svg"
+  "icons/32x32.png",
+  "icons/128x128.png",
+  "icons/128x128@2x.png",
+  "icons/icon.icns",
+  "icons/icon.ico"
 ]
 externalBin = [ "binaries/squeezelite" ]
 
