--- a/src-tauri/Tauri.toml
+++ b/src-tauri/Tauri.toml
@@ -41,6 +41,9 @@ externalBin = [ "binaries/squeezelite" ]
 [tauri.bundle.appimage]
 bundleMediaFramework = true
 
+[tauri.bundle.mac]
+entitlements = "../Entitlements.plist"
+
 [tauri.security]
 
 [[tauri.windows]]
