Delete unused config files

--- a/massdesktop.desktop
+++ b/massdesktop.desktop
@@ -3,6 +3,6 @@ Categories=Music
 Comment=Mass Desktop App
 Exec=mass
 Icon=mass
-Name=Mass Desktop
+Name=Mass Desktop App
 Terminal=false
 Type=Application
