--- a/src-tauri/Tauri.toml
+++ b/src-tauri/Tauri.toml
@@ -7,7 +7,7 @@ withGlobalTauri = false
 
 [package]
 productName = "mass"
-version = "0.0.6"
+version = "0.0.7"
 
 [tauri.allowlist]
 all = false
@@ -43,6 +43,9 @@ externalBin = [ "binaries/squeezelite" ]
 
 [tauri.bundle.appimage]
 bundleMediaFramework = true
+
+[tauri.bundle.macOS]
+entitlements = 'Entitlements.plist'
 
 [tauri.security]
 
