--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "mass"
+name = "music_assistant"
 version = "0.0.8"
-description = "Mass Desktop App"
+description = "Music Assistant Desktop App"
 authors = ["you"]
 license = "Apache-2.0"
 repository = "https://github.com/Un10ck3d/massapp"
