--- a/src-tauri/Tauri.toml
+++ b/src-tauri/Tauri.toml
@@ -6,7 +6,7 @@ distDir = "../frontend-source/dist"
 withGlobalTauri = false
 
 [package]
-productName = "mass"
+productName = "music_assistant"
 version = "0.0.8"
 
 [tauri.allowlist]
@@ -31,7 +31,7 @@ args = true
 [tauri.bundle]
 active = true
 targets = "all"
-identifier = "com.mass.app"
+identifier = "com.music_assistant.app"
 icon = [
   "icons/32x32.png",
   "icons/128x128.png",
@@ -52,7 +52,7 @@ entitlements = 'Entitlements.plist'
 [[tauri.windows]]
 fullscreen = false
 resizable = true
-title = "Mass Desktop"
+title = "Music Assistant"
 width = 800
 height = 600
 
