--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,9 +26,9 @@ jobs:
             const { data } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: `app-v${process.env.PACKAGE_VERSION}`,
-              name: `Desktop App v${process.env.PACKAGE_VERSION}`,
-              body: 'Take a look at the assets to download and install this app.',
+              tag_name: `v${process.env.PACKAGE_VERSION}`,
+              name: `Music Assistant Desktop App v${process.env.PACKAGE_VERSION}`,
+              body: 'The Music Assistant Desktop App. Download the correct installer down in the assets.',
               draft: true,
               prerelease: false
             })
