--- a/src-tauri/Tauri.toml
+++ b/src-tauri/Tauri.toml
@@ -31,7 +31,7 @@ args = true
 [tauri.bundle]
 active = true
 targets = "all"
-identifier = "com.music_assistant.app"
+identifier = "com.musicassistant.app"
 icon = [
   "icons/32x32.png",
   "icons/128x128.png",
