--- a/src-tauri/Tauri.toml
+++ b/src-tauri/Tauri.toml
@@ -37,6 +37,7 @@ icon = [
   "icons/128x128.png",
   "icons/128x128@2x.png",
   "icons/icon.icns",
+  "icons/icon.ico"
 ]
 externalBin = [ "binaries/squeezelite" ]
 
