--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -117,7 +117,7 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          #args: --target universal-apple-darwin
+          args: --target universal-apple-darwin
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
   publish-release:
