--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,13 +13,15 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { git="https://github.com/Un10ck3d/tauri", branch = "fix/http-scope", features = [ "window-all", "updater", "dialog-all", "shell-sidecar", "shell-open", "process-command-api", "devtools", "config-toml"] }
+tauri = { version = "1.4", features = [ "window-all", "updater", "dialog-all", "shell-sidecar", "shell-open", "process-command-api", "devtools", "config-toml"] }
 discord-rich-presence = "0.2.3"
 tungstenite = {version = "0.19.0", features = ["native-tls"] }
 url = "2.4.0"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 gethostname = "0.4.3"
+tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+portpicker = "0.1" # used in the example to pick a random free port
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
