--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-22.04, windows-latest]
+        platform: [macos-latest, ubuntu-22.04, windows-latest, macos-12]
+
     runs-on: ${{ matrix.platform }}
 
     steps:
@@ -108,7 +109,7 @@ jobs:
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
-      - name: Build the app (Mac)
+      - name: Build the app (Mac (Apple Silicon))
         if: matrix.platform == 'macos-latest'
         uses: tauri-apps/tauri-action@v0
   
@@ -117,7 +118,18 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          args: --target universal-apple-darwin
+          args: --target aarch64-apple-darwin
+          releaseId: ${{ needs.create-release.outputs.release_id }}
+
+      - name: Build the app (Mac)
+        if: matrix.platform == 'macos-12'
+        uses: tauri-apps/tauri-action@v0
+  
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+        with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
   publish-release:
