--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,57 +7,11 @@ on:
         required: true
         type: choice
         options:
-          - major
+          - patcch
           - minor
-          - patch
+          - major
 
 jobs:
-  create-release:
-    permissions:
-      contents: write
-    runs-on: ubuntu-22.04
-    outputs:
-      release_id: ${{ steps.create-release.outputs.result }}
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: true
-      - name: semver
-        uses: SOLIDSoftworks/semver-tags@v1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
-          tag-prefix: 'v'
-          incremented-value: ${{ inputs.version }}
-
-      - name: NPM-Version
-        uses: Reedyuk/NPM-Version@1.2.1
-        with:
-          version: ${{ steps.semver.semantic-version }}
-          git-tag-version: 'true'
-
-      - name: setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: get version
-        run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
-      - name: create release
-        id: create-release
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const { data } = await github.rest.repos.createRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: `v${process.env.PACKAGE_VERSION}`,
-              name: `Music Assistant Desktop App v${process.env.PACKAGE_VERSION}`,
-              body: 'The Music Assistant Desktop App. Download the correct installer down in the assets.',
-              draft: true,
-              prerelease: false
-            })
-            return data.id
-
   build:
     permissions:
       contents: write
@@ -73,6 +27,22 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+      - name: semver
+        uses: SOLIDSoftworks/semver-tags@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          tag-prefix: 'v'
+          incremented-value: ${{ inputs.version }}
+  
+      - name: NPM-Version
+        uses: Reedyuk/NPM-Version@1.2.1
+        with:
+          version: ${{ steps.semver.semantic-version }}
+          git-tag-version: 'true'
 
       - name: Install dependencies (Linux)
         if: matrix.platform == 'ubuntu-22.04'
