--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
         required: true
         type: choice
         options:
-          - patcch
+          - patch
           - minor
           - major
 
