--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -117,7 +117,7 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with: 
-          tagName: ${{ needs.update_version.outputs.version }}
+          tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant desktop ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
@@ -130,7 +130,7 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: ${{ needs.update_version.outputs.version }}
+          tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant desktop ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
@@ -144,7 +144,7 @@ jobs:
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           args: --target aarch64-apple-darwin
-          tagName: ${{ needs.update_version.outputs.version }}
+          tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant desktop ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
@@ -157,6 +157,6 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: ${{ needs.update_version.outputs.version }}
+          tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant desktop ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
