--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -118,7 +118,7 @@ jobs:
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with: 
           tagName: v${{ needs.update_version.outputs.version }}
-          releaseName: "Music Assistant desktop ${{ needs.update_version.outputs.version }}"
+          releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
       - name: Build the app (Windows)
@@ -131,7 +131,7 @@ jobs:
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           tagName: v${{ needs.update_version.outputs.version }}
-          releaseName: "Music Assistant desktop ${{ needs.update_version.outputs.version }}"
+          releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
       - name: Build the app (Mac (Apple Silicon))
@@ -145,7 +145,7 @@ jobs:
         with:
           args: --target aarch64-apple-darwin
           tagName: v${{ needs.update_version.outputs.version }}
-          releaseName: "Music Assistant desktop ${{ needs.update_version.outputs.version }}"
+          releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
       - name: Build the app (Mac)
@@ -158,5 +158,5 @@ jobs:
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           tagName: v${{ needs.update_version.outputs.version }}
-          releaseName: "Music Assistant desktop ${{ needs.update_version.outputs.version }}"
+          releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
