revert "no v in version lol" + v 10

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,7 @@ jobs:
         uses: SOLIDSoftworks/semver-tags@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          tag-prefix: 'v'
           incremented-value: ${{ inputs.version }}
 
       - name: NPM-Version
@@ -116,7 +117,7 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with: 
-          tagName: ${{ needs.update_version.outputs.version }}
+          tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
@@ -129,7 +130,7 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: ${{ needs.update_version.outputs.version }}
+          tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
@@ -143,7 +144,7 @@ jobs:
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           args: --target aarch64-apple-darwin
-          tagName: ${{ needs.update_version.outputs.version }}
+          tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
 
@@ -156,6 +157,6 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: ${{ needs.update_version.outputs.version }}
+          tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
