Validate ip and port before trying to connect

--- a/src-tauri/Tauri.toml
+++ b/src-tauri/Tauri.toml
@@ -14,6 +14,9 @@ all = false
 open = true
 sidecar = true
 
+[tauri.allowlist.dialog]
+message = true
+
 [[tauri.allowlist.shell.scope]]
 name = "squeezelite"
 sidecar = true
