--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -160,3 +160,11 @@ jobs:
           tagName: v${{ needs.update_version.outputs.version }}
           releaseName: "Music Assistant Desktop App ${{ needs.update_version.outputs.version }}"
           releaseBody: "Fixes"
+
+      - name: Upload linux binary
+        if: matrix.platform == 'ubuntu-22.04'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          tag: v${{ needs.update_version.outputs.version }}
+          asset_name: music-assistant-desktop-${{ needs.update_version.outputs.version  }}
+          file: /src-tauri/target/release/music-assistant-desktop
