--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -169,3 +169,10 @@ jobs:
           tag: v${{ needs.update_version.outputs.version }}
           asset_name: music-assistant-desktop-${{ needs.update_version.outputs.version  }}
           file: src-tauri/target/release/music-assistant-desktop
+
+      - name: Upload squeezelite binary
+        if: matrix.platform == 'ubuntu-22.04'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          tag: v${{ needs.update_version.outputs.version }}
+          file: src-tauri/binaries/squeezelite-x86_64-unknown-linux-gnu
