--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,26 +2,24 @@
 name = "music-assistant-companion"
 version = "0.0.16"
 description = "Music Assistant Companion App"
-authors = ["you"]
+authors = ["The Music Assistant Team"]
 license = "Apache-2.0"
-repository = "https://github.com/Un10ck3d/massapp"
+repository = "https://github.com/music-assistant/companion"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.4", features = [] }
+tauri-build = { version = "1.4.1", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "dialog-message", "updater", "shell-sidecar", "shell-open", "process-command-api", "devtools", "config-toml"] }
+tauri = { version = "1.5", features = [ "dialog-message", "updater", "shell-sidecar", "shell-open", "process-command-api", "devtools"] }
 discord-rich-presence = "0.2.3"
 tungstenite = {version = "0.20.1", features = ["native-tls"] }
 url = "2.4.0"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 gethostname = "0.4.3"
-tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
