--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "license": "Apache-2.0",
     "scripts": {
         "tauri": "tauri",
-        "build": "cd frontend-source/ && yarn build"
+        "build": "cd frontend-source/ && yarn build",
+        "dev": "cd frontend-source/ && yarn dev"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^1.5.0"
