--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "process-relaunch", "dialog-message", "updater", "shell-sidecar", "shell-open", "process-command-api", "devtools"] }
+tauri = { version = "1.5", features = [ "process-relaunch", "updater", "shell-sidecar", "shell-open", "process-command-api", "devtools"] }
 discord-rich-presence = "0.2.3"
 tungstenite = {version = "0.20.1", features = ["native-tls"] }
 url = "2.4.0"
