--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,7 @@ tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
 tauri = { version = "1.5", features = [ "process-relaunch", "updater", "shell-sidecar", "shell-open", "process-command-api", "devtools"] }
+tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 discord-rich-presence = "0.2.3"
 tungstenite = {version = "0.20.1", features = ["native-tls"] }
 url = "2.4.0"
