--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -78,7 +78,7 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-4-dev libwebkit2gtk-4.0-dev librsvg2-dev libayatana-appindicator
+          sudo apt-get install -y libgtk-4-dev libwebkit2gtk-4.0-dev librsvg2-dev libayatana-appindicator3-dev
 
       - name: Install Rust (Stable)
         run:
