Add tauri-plugin-window-state-api dependency

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     },
     "devDependencies": {
         "@tauri-apps/cli": "^1.5.6"
+    },
+    "dependencies": {
+        "tauri-plugin-window-state-api": "https://github.com/tauri-apps/tauri-plugin-window-state#v1"
     }
 }
