--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.5", features = [] }
 tauri = { version = "1.5.2", features = [ "system-tray", "process-relaunch", "updater", "shell-sidecar", "shell-open", "process-command-api", "devtools"] }
 tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 discord-rich-presence = "0.2.3"
 tungstenite = {version = "0.20.1", features = ["native-tls"] }
 url = "2.4.1"
