--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "dev": "cd frontend/ && yarn dev"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^1.5.13"
+        "@tauri-apps/cli": "^2.0.0-beta.20"
     },
     "dependencies": {
+        "@tauri-apps/plugin-process": "^2.0.0-beta.4",
+        "@tauri-apps/plugin-shell": "^2.0.0-beta.5",
         "tauri-plugin-window-state-api": "https://github.com/tauri-apps/tauri-plugin-window-state#v1"
     }
 }
