--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,20 +10,30 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.2", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "1.6.7", features = [ "system-tray", "process-relaunch", "updater", "shell-sidecar", "shell-open", "process-command-api", "devtools"] }
-tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
-tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri = { version = "2.0.0-beta", features = [ "devtools", "tray-icon"] }
+tauri-plugin-websocket = "2.0.0-beta"
+tauri-plugin-single-instance = "2.0.0-beta"
+tauri-plugin-window-state = "2.0.0-beta"
 discord-rich-presence = "0.2.4"
 tungstenite = {version = "0.21.0", features = ["native-tls"] }
 url = "2.5.0"
-serde = { version = "1.0.202", features = ["derive"] }
+serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 gethostname = "0.4.3"
+tauri-plugin-shell = "2.0.0-beta.6"
+tauri-plugin-process = "2.0.0-beta.5"
+
+[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
+tauri-plugin-updater = "2.0.0-beta.6"
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[lib]
+name = "app_lib"
+crate-type = ["staticlib", "cdylib", "rlib", "lib"]
